[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = {version = "1.25.0", features = ["derive"]}
cargo-watch = "8.5.3"
env_logger = "0.11.9"
# image = "0.25.10"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.13"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
